{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 13,
  "lineage": "ea604a0d-552c-92f3-f3fe-a719ccdfd960",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/regions/us-central1/instanceGroups/multi-zone-web-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-20T08:17:53.041-08:00",
            "enable_cdn": false,
            "fingerprint": "RcXyfnn2A5U=",
            "generated_id": 4629859892155520094,
            "health_checks": [
              "projects/project-3e800f45-77e7-454a-a2b/global/healthChecks/multi-zone-http-health-check"
            ],
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/backendServices/multi-zone-web-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "multi-zone-web-backend",
            "port_name": "http",
            "project": "project-3e800f45-77e7-454a-a2b",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/backendServices/multi-zone-web-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance_template.template",
            "google_compute_network.vpc",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-20T08:16:11.763-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/firewalls/multi-zone-allow-health-check",
            "log_config": [],
            "name": "multi-zone-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/multi-zone-lb-vpc",
            "priority": 1000,
            "project": "project-3e800f45-77e7-454a-a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/firewalls/multi-zone-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-20T08:16:11.800-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/firewalls/multi-zone-allow-http",
            "log_config": [],
            "name": "multi-zone-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/multi-zone-lb-vpc",
            "priority": 1000,
            "project": "project-3e800f45-77e7-454a-a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/firewalls/multi-zone-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-20T08:16:11.846-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/firewalls/multi-zone-allow-ssh",
            "log_config": [],
            "name": "multi-zone-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/multi-zone-lb-vpc",
            "priority": 1000,
            "project": "project-3e800f45-77e7-454a-a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/firewalls/multi-zone-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/forwardingRules/multi-zone-web-http-forwarding-rule",
            "ip_address": "34.36.87.63",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "multi-zone-web-http-forwarding-rule",
            "port_range": "80-80",
            "project": "project-3e800f45-77e7-454a-a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/forwardingRules/multi-zone-web-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/targetHttpProxies/multi-zone-web-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_template.template",
            "google_compute_network.vpc",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/networks/multi-zone-lb-vpc",
            "mtu": 0,
            "name": "multi-zone-lb-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4739198983438734554",
            "project": "project-3e800f45-77e7-454a-a2b",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/multi-zone-lb-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T08:16:12.729-08:00",
            "gateway_address": "10.40.0.1",
            "id": "projects/project-3e800f45-77e7-454a-a2b/regions/us-central1/subnetworks/multi-zone-lb-subnet",
            "ip_cidr_range": "10.40.0.0/24",
            "name": "multi-zone-lb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/multi-zone-lb-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-3e800f45-77e7-454a-a2b",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/regions/us-central1/subnetworks/multi-zone-lb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T08:19:09.515-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/targetHttpProxies/multi-zone-web-http-proxy",
            "name": "multi-zone-web-http-proxy",
            "project": "project-3e800f45-77e7-454a-a2b",
            "proxy_bind": false,
            "proxy_id": 5115121369025221650,
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/targetHttpProxies/multi-zone-web-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/urlMaps/multi-zone-web-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_template.template",
            "google_compute_network.vpc",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T08:18:57.427-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/backendServices/multi-zone-web-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "vJwWPMiTpjQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/urlMaps/multi-zone-web-url-map",
            "map_id": 2887895661695603742,
            "name": "multi-zone-web-url-map",
            "path_matcher": [],
            "project": "project-3e800f45-77e7-454a-a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/urlMaps/multi-zone-web-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_template.template",
            "google_compute_network.vpc",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}